fix input being cropped off the sidebar.

--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,6 @@ body {
     background-color: yellow;
 }
 
-#places-search {
-    width: 75%;
-}
-
 /* Always set the map height explicitly to define the size of the div
  * element that contains the map. */
 #map {
